zlib/configure.log
--------------------
./configure
So 14 Dez 2014 12:48:22 CET
=== ztest9229.c ===
extern int getchar();
int hello() {return getchar();}
===
/Users/alex/emsdk_portable/emscripten/1.25.0/emcc -c ztest9229.c
... using /Users/alex/emsdk_portable/emscripten/1.25.0/emcc

Checking for obsessive-compulsive compiler options...
=== ztest9229.c ===
int foo() { return 0; }
===
/Users/alex/emsdk_portable/emscripten/1.25.0/emcc -c ztest9229.c

Checking for shared library support...
=== ztest9229.c ===
extern int getchar();
int hello() {return getchar();}
===
/Users/alex/emsdk_portable/emscripten/1.25.0/emcc -w -c ztest9229.c
/Users/alex/emsdk_portable/emscripten/1.25.0/emcc -o ztest9229.so ztest9229.o
clang: warning: argument unused during compilation: '-nostdinc'
clang: warning: argument unused during compilation: '-Xclang -nobuiltininc'
clang: warning: argument unused during compilation: '-Xclang -nostdsysteminc'
clang: warning: argument unused during compilation: '-Xclang -isystem/Users/alex/emsdk_portable/emscripten/1.25.0/system/local/include'
clang: warning: argument unused during compilation: '-Xclang -isystem/Users/alex/emsdk_portable/emscripten/1.25.0/system/include/compat'
clang: warning: argument unused during compilation: '-Xclang -isystem/Users/alex/emsdk_portable/emscripten/1.25.0/system/include'
clang: warning: argument unused during compilation: '-Xclang -isystem/Users/alex/emsdk_portable/emscripten/1.25.0/system/include/emscripten'
clang: warning: argument unused during compilation: '-Xclang -isystem/Users/alex/emsdk_portable/emscripten/1.25.0/system/include/libc'
clang: warning: argument unused during compilation: '-Xclang -isystem/Users/alex/emsdk_portable/emscripten/1.25.0/system/lib/libc/musl/arch/js'
clang: warning: argument unused during compilation: '-Xclang -isystem/Users/alex/emsdk_portable/emscripten/1.25.0/system/include/SDL'
clang: warning: argument unused during compilation: '-Xclang -isystem/Users/alex/emsdk_portable/emscripten/1.25.0/system/include/libcxx'
Undefined symbols for architecture x86_64:
  "_main", referenced from:
     -u command line option
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)
(exit code 1)
No shared library support; try without defining CC and CFLAGS
Building static library libz.a version 1.2.8 with /Users/alex/emsdk_portable/emscripten/1.25.0/emcc.

=== ztest9229.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
/Users/alex/emsdk_portable/emscripten/1.25.0/emcc -c -D_LARGEFILE64_SOURCE=1 ztest9229.c
Checking for off64_t... Yes.
Checking for fseeko... Yes.

=== ztest9229.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
/Users/alex/emsdk_portable/emscripten/1.25.0/emcc -D_LARGEFILE64_SOURCE=1 -o ztest9229 ztest9229.c
Undefined symbols for architecture x86_64:
  "___errno_location", referenced from:
      _main in ztest9229-V2n4DP.o
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)
(exit code 1)
Checking for strerror... No.

=== ztest9229.c ===
#include <unistd.h>
int main() { return 0; }
===
/Users/alex/emsdk_portable/emscripten/1.25.0/emcc -c -D_LARGEFILE64_SOURCE=1 -DNO_STRERROR ztest9229.c
Checking for unistd.h... Yes.

=== ztest9229.c ===
#include <stdarg.h>
int main() { return 0; }
===
/Users/alex/emsdk_portable/emscripten/1.25.0/emcc -c -D_LARGEFILE64_SOURCE=1 -DNO_STRERROR ztest9229.c
Checking for stdarg.h... Yes.

=== ztest9229.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
/Users/alex/emsdk_portable/emscripten/1.25.0/emcc -c -D_LARGEFILE64_SOURCE=1 -DNO_STRERROR ztest9229.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest9229.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
/Users/alex/emsdk_portable/emscripten/1.25.0/emcc -D_LARGEFILE64_SOURCE=1 -DNO_STRERROR -o ztest9229 ztest9229.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest9229.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
/Users/alex/emsdk_portable/emscripten/1.25.0/emcc -c -D_LARGEFILE64_SOURCE=1 -DNO_STRERROR ztest9229.c
Checking for return value of vsnprintf()... Yes.

ALL = static all64
AR = /Users/alex/emsdk_portable/emscripten/1.25.0/emar
ARFLAGS = rc
CC = /Users/alex/emsdk_portable/emscripten/1.25.0/emcc
CFLAGS = -D_LARGEFILE64_SOURCE=1 -DNO_STRERROR
CPP = /Users/alex/emsdk_portable/emscripten/1.25.0/emcc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = /Users/alex/emsdk_portable/emscripten/1.25.0/emcc
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = /Users/alex/emsdk_portable/emscripten/1.25.0/emranlib
SFLAGS = -D_LARGEFILE64_SOURCE=1 -DNO_STRERROR
SHAREDLIB =
SHAREDLIBM =
SHAREDLIBV =
STATICLIB = libz.a
TEST = all teststatic test64
VER = 1.2.8
Z_U4 =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /usr/local
sharedlibdir = ${libdir}
uname = Darwin 13.4.0
--------------------


--------------------
./configure
Sat Mar  9 16:54:41 CET 2019
Checking for gcc...
=== ztest24420.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -c ztest24420.c
... using gcc

Checking for obsessive-compulsive compiler options...
=== ztest24420.c ===
int foo() { return 0; }
===
gcc -c -O3 ztest24420.c

Checking for shared library support...
=== ztest24420.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -w -c -O3 -fPIC ztest24420.c
gcc -dynamiclib -install_name ${exec_prefix}/lib/libz.1.dylib -compatibility_version 1 -current_version 1.2.8 -O3 -fPIC -o ztest24420.dylib ztest24420.o
Building shared library libz.1.2.8.dylib with gcc.

=== ztest24420.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
gcc -c -O3 -D_LARGEFILE64_SOURCE=1 ztest24420.c
ztest24420.c:2:1: error: unknown type name 'off64_t'; did you mean 'off_t'?
off64_t dummy = 0;
^~~~~~~
off_t
/usr/include/sys/_types/_off_t.h:31:25: note: 'off_t' declared here
typedef __darwin_off_t          off_t;
                                ^
1 error generated.
(exit code 1)
Checking for off64_t... No.

=== ztest24420.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
gcc -O3 -o ztest24420 ztest24420.c
Checking for fseeko... Yes.

=== ztest24420.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
gcc -O3 -o ztest24420 ztest24420.c
Checking for strerror... Yes.

=== ztest24420.c ===
#include <unistd.h>
int main() { return 0; }
===
gcc -c -O3 ztest24420.c
Checking for unistd.h... Yes.

=== ztest24420.c ===
#include <stdarg.h>
int main() { return 0; }
===
gcc -c -O3 ztest24420.c
Checking for stdarg.h... Yes.

=== ztest24420.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
gcc -c -O3 ztest24420.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest24420.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -O3 -o ztest24420 ztest24420.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest24420.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -c -O3 ztest24420.c
Checking for return value of vsnprintf()... Yes.

=== ztest24420.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
gcc -c -O3 ztest24420.c
Checking for attribute(visibility) support... Yes.

ALL = static shared
AR = libtool
ARFLAGS = -o
CC = gcc
CFLAGS = -O3 -DHAVE_HIDDEN
CPP = gcc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = gcc -dynamiclib -install_name ${exec_prefix}/lib/libz.1.dylib -compatibility_version 1 -current_version 1.2.8
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -O3 -fPIC -DHAVE_HIDDEN
SHAREDLIB = libz.dylib
SHAREDLIBM = libz.1.dylib
SHAREDLIBV = libz.1.2.8.dylib
STATICLIB = libz.a
TEST = all teststatic testshared
VER = 1.2.8
Z_U4 =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /usr/local
sharedlibdir = ${libdir}
uname = Darwin
--------------------


